cluster/core/cilium/app/hubble-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hubble-ui
  namespace: kube-system
  annotations:
    gethomepage.dev/enabled: 'true'
    gethomepage.dev/group: Maintenance
    gethomepage.dev/icon: cilium
    gethomepage.dev/name: Hubble UI
spec:
  parentRefs:
    - name: private
      namespace: networking
      sectionName: websecure-private
  hostnames:
    - hubble.${SECRET_PRIVATE_DOMAIN}
  rules:
    - filters:
        - type: ExtensionRef
          extensionRef:
            group: traefik.io
            kind: Middleware
            name: oidc-admins
      backendRefs:
        - name: hubble-ui
          port: 80
